[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mahou-no-bunseki"
version = "0.0.1"
description = "Audio analysis tools"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "librosa",
    "soundfile",
    "mahou-libs"
]

[tool.setuptools]
packages = ["bunseki"]